--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/style.css
@@ -1,27 +1,34 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
+.super-mario {
+    position: absolute;
+    width: 200px;
+    left: 20px;
+    z-index: 2;
   }
   
-  .width-and-height {
-    height: 50px;
-    width: 50px;
+.baloon {
+    position: absolute;
+    width: 155px;
+    left: 240px;
+    top: 100px;
+}
+.bowser {
+    position: absolute;
+    width: 200px;
+    left: 400px;
   }
-  
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
-    padding: 20px;
+  .goomba {
+    position: absolute;
+    width: 100px;
+    top: 355px;
+    left: 15px;
+    margin-top: 15px;
+    z-index: 1;
+   
   }
-  
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-    padding: 30px;
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
-    border: 5px solid black;
+  .speach {
+    position: absolute;
+    font-size: 20px;
+    left: 260px;
+    top: 94px;
+   
   }
