--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/exercicio-Cores/estilando-para-Fixar-II.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/exercicio-Cores/estilando-para-Fixar-II.css
@@ -1,35 +1,34 @@
-div:hover  {
-    font-style: italic;
-    background-color: red;
-    padding: 5px 10px;
-    border-radius: 15px;
-    max-width: 200px;
+div:hover:nth-of-type(1) {
+   background-color: red;
+   max-width: 115px;
+   border-radius: 5px;
+   text-decoration: underline;
 }
-div:hover  {
-    background-color: greenyellow;
-    padding: 5px 10px;
-    border-radius: 15px;
-    max-width: 200px;
+div:hover:nth-of-type(2) {
+    background-color: green;
+    max-width: 180px;
+    border-radius: 5px;
+    text-transform: uppercase;
 }
-div:hover  {
-    font-style: italic;
-    font-size: 50px;
-    background-color: purple;
-    padding: 5px 15px;
-    border-radius: 15px;
-    max-width: 500px;
+div:hover:nth-of-type(3) {
+    font-size: 45px;
+    background-color: blueviolet;
+    max-width:450px;
+    border-radius: 5px;
+    color:rgb(245, 34, 245);
 }
-div:hover  {
-    color: white;
+div:hover:nth-of-type(4) {
     background-color: black;
-    padding: 5px 10px;
-    border-radius: 15px;
-    max-width: 200px;
+    color: white;
+    max-width: 100px;
+    border-radius: 5px;
+    text-decoration:line-through;
 }
-div:hover  {
+div:hover:last-of-type {
+   background-color: rgb(88, 228, 241);
+   max-width: 90px;
+   border-radius: 5px;
+}
+div:hover:nth-of-type(2n+1) {
     font-style: italic;
-    background-color: #B2E6FF;
-    padding: 5px 10px;
-    border-radius: 15px;
-    max-width: 200px;
 }
