Adicionando cor ao hover, e arrumando background pink

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes.css
@@ -20,11 +20,25 @@ h1.header {
 }
 ul.firstList li.pink {
     background-color: rgb(240, 145, 240);
+    max-width: 110px;
+    border-radius: 6px;
 }
 ul.firstList li:nth-of-type(-n+3) {
     color: blue
 }
-#orange:hover {
-    text-decoration: none;
+.orange:hover {
+    font-weight: bold;
     color: orange;
+}
+.green:hover {
+    font-weight: bold;
+    color: rgb(54, 214, 14);
+}
+.black:hover {
+    font-weight: bold;
+    color: black;
+}
+.yellow:hover {
+    font-weight:bold;
+    color: yellow;
 }
