--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3.3-html-css-seletores-e-posicionamento/Combinacoes-e-Classes-Descendentes/classes.css
@@ -1,5 +1,7 @@
 ol {
     background-color: yellow;
+    border-radius: 10px;
+    max-width: 1100px;
 }
 ol li:nth-of-type(2n) {
     color: green;
@@ -17,6 +19,8 @@ li {
 h1.header {
     font-size: 40px;
     border: solid black 1px;
+    max-width: 640px;
+    border-radius: 10px;
 }
 ul.firstList li.pink {
     background-color: rgb(240, 145, 240);
